# expressive-tts-arena

./: .dockerignore  .env.example  .gitignore  .huggingface-space  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  anthropic_api.py  app.py  config.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: sync-to-huggingface.yml
gradio-env/: pyvenv.cfg
helm/: Chart.yaml  values.prod.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  backendconfig.yaml  cert.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: __init__.py  app.py  config.py  constants.py  custom_types.py  frontend.py  main.py  sample_prompts.py  theme.py  types.py  utils.py
src/assets/: styles.css
src/common/: __init__.py  common_types.py  config.py  constants.py  utils.py
src/core/: __init__.py  leaderboard_service.py  tts_service.py  voting_service.py
src/database/: __init__.py  crud.py  database.py  models.py
src/frontend/: __init__.py  constants.py  frontend.py
src/frontend/components/: __init__.py  arena.py  leaderboard.py
src/integrations/: __init__.py  anthropic.py  anthropic_api.py  elevenlabs.py  elevenlabs_api.py  hume.py  hume_api.py  openai.py  openai_api.py
src/middleware/: __init__.py  meta_tag_injection.py
src/scripts/: __init__.py  init_db.py  test_db.py
static/css/: styles.css
