[project]
name = "expressive-tts-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "elevenlabs>=1.50.7",
    "gradio>=5.15.0",
    "psycopg2>=2.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.0",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "watchfiles>=1.0.4",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = [
    "B904",
    "BLE001",
    "D100",
    "D104",
    "EM101",
    "EM102",
    "FIX002",
    "G004",
    "PLR0913",
    "PLR2004",
    "TD002",
    "TD003",
]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "E",
    "EM",
    "ERA",
    "F",
    "FIX",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PL",
    "PT",
    "PTH",
    "PLR",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TCH",
    "TD",
    "TID",
    "W",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"**/*.py" = ["A001", "A002"]
"**/tests/**/*.py" = ["SLF", "PLR2004", "PLR6301"]
"src/myxa/cli.py" = ["T201", "T203"]